--- a/app/nunjucks/layouts/_main.html
+++ b/app/nunjucks/layouts/_main.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 	<title>{{ title }}</title>
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -19,21 +20,44 @@
 					<div class="header__logo__desc">Решения для гиперспектральной <br> визуализации</div>
 				</div>
 				<ul class="header__nav">
-					<li class="has-children"><a href="/">База знаний</a></li>
+					<li class="has-children">
+						<a href="/">База знаний</a>
+						<ul class="submenu">
+							<li><a href="">Pika L</a></li>
+							<li><a href="">Pika XC2</a></li>
+							<li><a href="">Pika NIR-320</a></li>
+							<li><a href="">Pika NIR-640</a></li>
+							<li><a href="">Pika NUV</a></li>
+							<li><a href="">Объективные линзы</a></li>
+						</ul>
+					</li>
 					<li><a href="/">О нас</a></li>
 					<li><a href="/">Связаться с нами</a></li>
 				</ul>
-				<button class="btn">Заказать звонок</button>
+				<button class="btn header__top__callorder">Заказать звонок</button>
 				<div class="header__phoneblock">
 					<a href="tel:8 800 555 55 55" class="header__phone">8 800 555 55 55</a>
 					<div class="header__phone__desc">Звонок по России бесплатно</div>
+				</div>
+				<div class="header__hamburger">
+					<img src="img/hamburger.svg" alt="">
 				</div>
 			</div>
 		</div>
 		<div class="header__bottom">
 			<div class="container">
 				<ul class="header__nav">
-					<li class="has-children"><a href="/">Гиперспектральные камеры</a></li>
+					<li class="has-children">
+						<a href="/">Гиперспектральные камеры</a>
+						<ul class="submenu">
+							<li><a href="">Pika L</a></li>
+							<li><a href="">Pika XC2</a></li>
+							<li><a href="">Pika NIR-320</a></li>
+							<li><a href="">Pika NIR-640</a></li>
+							<li><a href="">Pika NUV</a></li>
+							<li><a href="">Объективные линзы</a></li>
+						</ul>
+					</li>
 					<li class="has-children"><a href="/">Системы</a></li>
 					<li><a href="/">Машинное зрение</a></li>
 					<li><a href="/">Гиперспектральное программное обеспечение</a></li>
