--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,27 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-@red: #a60000;
+@import "partials/_vars.less";
 * {
   margin: 0;
   padding: 0;
   font-family: "IBM Plex Sans", sans-serif;
   text-decoration: none;
   outline: none;
+  list-style-type: none;
 }
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #F7FAFE;
 }
-
+button {
+  cursor: pointer;
+}
+// ======================================= p =======================================//
+p {
+  font-weight: 300;
+  font-size: 16px;
+  color: #07152B;
+  .red {
+    color: @red;
+    font-weight: 500;
+  }
+  a {
+    color: @red;
+    font-weight: 500;
+  }
+}
+@media screen and (max-width: 500px) {
+  p {
+    font-size: 12px;
+  }
+}
+// =======================================END p =======================================//
+// =======================================container=======================================//
 .container {
   max-width: 1330px;
   padding: 0 30px;
   margin: 0 auto;
 }
-button {
-  cursor: pointer;
+@media screen and (max-width: 500px) {
+  .container {
+    padding: 0 15px;
+  }
 }
+// ================================END container =======================================//
+// ================================ btn =======================================//
 .btn {
   font-weight: normal;
   font-size: 14px;
@@ -34,7 +63,290 @@ button {
   &:hover {
     background-color: darken(@red, 5%);
   }
+  &.gray {
+    background-color: #EBEBEB;
+    color: @red;
+  }
+  &.white {
+    background-color: #fff;
+    color: #1D1D1D;
+  }
 }
+.breadcrumbs {
+  margin-bottom: 20px;
+  font-size: 13px;
+  opacity: 0.5;
+  
+}
+@media screen and (max-width: 500px) {
+  .btn {
+    font-size: 12px;
+  }
+}
+// ================================END btn=======================================//
+// ================================ btn-link=======================================//
+.btn-link {
+  background-color: #EBEBEB;
+  border-radius: 3px;
+  padding: 8px 16px;
+  display: block;
+  float: left;
+  font-weight: normal;
+  font-size: 14px;
+  color: #a60000;
+  margin-top: 15px;
+}
+// ================================END btn-link=======================================//
+// ================================link=======================================//
+.link {
+  font-weight: 500;
+  font-size: 18px;
+  color: #07152B;
+  position: relative;
+  margin-left: 27px;
+  &:before {
+    content: "";
+    position: absolute;
+    left: -27px;
+    top: 3px;
+    width: 18px;
+    height: 18px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-image: url(../img/link.svg);
+  }
+}
+@media screen and (max-width: 500px) {
+  .link {
+    font-size: 14px;
+    margin-left: 18px;
+    &:before {
+      width: 12px;
+      height: 12px;
+      left: -18px;
+    }
+  }
+}
+// ================================END link=======================================//
+// ================================ section-title =======================================//
+.sec-title {
+  font-weight: bold;
+  font-size: 30px;
+}
+@media screen and (max-width: 500px) {
+  .sec-title {
+    font-size: 20px;
+  }
+}
+// ================================END section-title=======================================//
+// ================================ table=======================================//
+table {
+  border-collapse: collapse;
+  
+  tr {
+    &:nth-child(odd) {
+      background-color: #fff;
+    }
+  }
+  td {
+    padding: 10px 13px;
+    strong {
+      font-weight: 600;
+    }
+  }
+  a {
+    font-weight: 600;
+    font-size: 16px;
+    color: @red;
+  }
+  img {
+    max-width: 90px;
+    height: auto;
+  }
+}
+@media screen and (max-width: 800px) {
+  
+  table {
+      font-size: 12px;
+      * {
+        font-size: 12px;
+      }
+      a {
+        font-size: 12px;
+      }
+  }
+  
+}
+// ================================END table=======================================//
+// ================================ content-wp-editor=======================================//
+.content-wp-editor {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+  grid-gap: 24px;
+  justify-content: start;
+  .btn {
+    justify-self: start;
+  }
+  p {
+    max-width: 728px;
+    font-size: 15px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.6;
+    // margin-top: 20px;
+  }
 
-@import "partials/_header.less";
-@import "partials/_footer.less";
+  img {
+    max-width: 100%;
+    // margin-top: 30px;
+  }
+  h1 {
+    font-size: 36px;
+    font-weight: 800;
+    // margin-top: 24px;
+  }
+  h2 {
+    font-size: 30px;
+    font-weight: 800;
+    // margin-top: 24px;
+  }
+  h3 {
+    font-size: 26px;
+    font-weight: 800;
+    // margin-top: 24px;
+  }
+  h4 {
+    font-size: 22px;
+    font-weight: 800;
+    // margin-top: 24px;
+  }
+  h5 {
+    font-size: 18px;
+    font-weight: 800;
+    // margin-top: 24px;
+  }
+  h6 {
+    font-size: 16px;
+    font-weight: 800;
+    // margin-top: 24px;
+  }
+  ul {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+    grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+    grid-gap: 13px;
+    // margin-top: 24px;
+    li {
+      position: relative;
+      padding-left: 20px;
+      &:before {
+        content: "";
+        display: block;
+        width: 8px;
+        height: 8px;
+        background-color: @red;
+        border-radius: 100%;
+        position: absolute;
+        left: 0;
+        top: 5px;
+      }
+    }
+  }
+  a {
+    color: @red;
+    text-decoration: underline;
+    &.btn {
+      color: white;
+      text-decoration: none;
+    }
+  }
+  table {
+    // margin-top: 24px;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 1px;
+    tr {
+      &:nth-child(1) {
+        td {
+          background-color: @red;
+          color: white;
+          font-size: 16px;
+          font-weight: bold;
+          border: 1px solid @red;
+        }
+      }
+    }
+    td {
+      padding: 18px 20px;
+      border: 1px solid #f2ece9;
+      background-color: white;
+      color: @red;
+      font-size: 16px;
+      font-weight: bold;
+    }
+  }
+}
+@media screen and (max-width: 800px) {
+  .content-wp-editor {
+    grid-gap: 13px;
+    p {
+      font-size: 12px;
+    }
+    ul {
+      font-size: 12px;
+    }
+    h1 {
+      font-size: 32px;
+    }
+    h2 {
+      font-size: 26px;
+    }
+    h3 {
+      font-size: 22px;
+    }
+    h4 {
+      font-size: 18px;
+    }
+    h5 {
+      font-size: 14px;
+    }
+    h6 {
+      font-size: 12px;
+    }
+  }
+}
+// ================================END content-wp-editor=======================================//
+
+@import "partials/sections/_header.less";
+@import "partials/sections/_hero.less";
+@import "partials/sections/_sec-1.less";
+@import "partials/sections/_sec-2.less";
+@import "partials/sections/_sec-3.less";
+@import "partials/sections/_sec-4.less";
+@import "partials/sections/_sec-5.less";
+@import "partials/sections/_sec-6.less";
+@import "partials/sections/_sec-7.less";
+@import "partials/sections/_sec-8.less";
+@import "partials/sections/_sec-9.less";
+@import "partials/sections/_sec-10.less";
+@import "partials/sections/_sec-11.less";
+@import "partials/sections/_sec-12.less";
+@import "partials/sections/_sec-13.less";
+@import "partials/sections/_sec-14.less";
+@import "partials/sections/_sec-15.less";
+@import "partials/sections/_sec-16.less";
+@import "partials/sections/_sec-17.less";
+@import "partials/sections/_sec-18.less";
+@import "partials/blocks/_block-1.less";
+@import "partials/blocks/_block-2.less";
+@import "partials/blocks/_block-3.less";
+@import "partials/blocks/_block-4.less";
+@import "partials/blocks/_block-5.less";
+
+
+@import "partials/sections/_footer.less";
+
