--- a/app/less/partials/sections/_header.less
+++ b/app/less/partials/sections/_header.less
@@ -1,5 +1,7 @@
+@import "../_vars.less";
 .header {
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 .header__top {
   padding: 14px 0;
@@ -22,6 +24,14 @@
   display: flex;
   align-items: center;
   list-style: none;
+  li {
+    position: relative;
+    &:hover {
+      .submenu {
+        display: block;
+      }
+    }
+  }
   a {
     color: #07152b;
     text-decoration: none;
@@ -33,6 +43,8 @@
       color: @red;
     }
   }
+  
+  
 }
 
 .header__phoneblock {
@@ -69,6 +81,18 @@
     transition: 0.3s;
   }
 }
+.header__top {
+  .header__nav a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .submenu {
+    top: 35px;
+    a {
+      padding: 5px 20px;
+    }
+  }
+}
 .header__bottom {
   border-top: 1px solid #f8f8f9;
   .header__nav {
@@ -77,5 +101,70 @@
       padding-top: 20px;
       padding-bottom: 20px;
     }
+    .submenu {
+      a {
+        padding: 5px 20px;
+      }
+    }
+  }
+}
+.submenu {
+  display: none;
+  position: absolute;
+  left: 35px;
+  top: 56px;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  border-bottom: 4px solid @red;
+  min-width: 200px;
+  padding: 5px 0;
+  z-index: 3;
+  a {
+    padding: 5px 20px;
+  }
+}
+.header__hamburger {
+  display: none;
+  padding: 15px;
+  margin-right: -15px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  .header__top__callorder {
+    display: none;
+  }
+  .header__hamburger {
+    display: block;
+  }
+  .header__bottom {
+    display: none;
+  }
+  .header__nav {
+    display: none;
+  }
+  .header__phoneblock {
+    margin-left: auto;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+.header__logo__desc {
+  display: none;
+}
+}
+
+@media screen and (max-width: 500px) {
+  .header__phoneblock {
+    display: none;
+  }
+  .header__logo {
+    img {
+      width: 100px;
+    }
+  }
+  .header__top {
+    padding: 0;
   }
 }
