--- a/app/less/partials/sections/_sec-11.less
+++ b/app/less/partials/sections/_sec-11.less
@@ -1,5 +1,4 @@
 .sec-11 {
-    padding: 36px 0;
     padding-bottom: 60px;
     table {
         margin-top: 37px;
@@ -8,11 +7,10 @@
 
 @media screen and (max-width: 800px) {
     .sec-11 {
-        padding: 26px 0;
         padding-bottom: 26px;
-        // table {
-        //     font-size: 12px;
-        //     margin-top: 20px;
-        // }
+        table {
+            margin-top: 22px;
+        }
     }
+    
 }
