--- a/app/css/main.css
+++ b/app/css/main.css
@@ -103,6 +103,7 @@
   text-decoration: none;
   outline: none;
   list-style-type: none;
+  box-sizing: border-box;
 }
 body {
   display: -webkit-box;
@@ -142,6 +143,20 @@ p a {
 @media screen and (max-width: 500px) {
   .container {
     padding: 0 15px;
+  }
+}
+.sec {
+  padding: 50px 0;
+}
+.sec.gray {
+  background-color: #F4F4F4;
+}
+.sec.white {
+  background-color: #fff;
+}
+@media screen and (max-width: 800px) {
+  .sec {
+    padding: 30px 0;
   }
 }
 .btn {
@@ -217,6 +232,13 @@ p a {
     left: -18px;
   }
 }
+.links {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+  grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+  grid-gap: 15px;
+}
 .sec-title {
   font-weight: bold;
   font-size: 30px;
@@ -271,7 +293,6 @@ table img {
   justify-self: start;
 }
 .content-wp-editor p {
-  max-width: 728px;
   font-size: 15px;
   font-weight: normal;
   font-stretch: normal;
@@ -381,6 +402,60 @@ table img {
     font-size: 14px;
   }
   .content-wp-editor h6 {
+    font-size: 12px;
+  }
+}
+.videoblock {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding-bottom: 55%;
+  background-color: gray;
+  position: relative;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.videoblock__play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+.doc {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: start;
+          align-items: flex-start;
+}
+.doc__icon {
+  width: 14px;
+  min-width: 14px;
+  height: 18px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url(../img/doc-icon.svg);
+  margin-right: 12px;
+}
+.doc__title {
+  font-weight: 500;
+  font-size: 18px;
+  color: black;
+}
+@media screen and (max-width: 800px) {
+  .doc__icon {
+    width: 9px;
+    min-width: 9px;
+    height: 12px;
+  }
+  .doc__title {
     font-size: 12px;
   }
 }
@@ -556,6 +631,7 @@ table img {
   background-position: center;
   background-size: cover;
   position: relative;
+  min-height: 300px;
 }
 .hero * {
   color: white;
@@ -609,14 +685,12 @@ table img {
 @media screen and (max-width: 500px) {
   .hero {
     padding: 40px 0;
+    min-height: 250px;
   }
   .hero__title {
     font-size: 24px;
     line-height: 110%;
   }
-}
-.sec-1 {
-  padding: 37px 0;
 }
 .sec-1 .container {
   display: grid;
@@ -624,11 +698,6 @@ table img {
   grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
   grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
   grid-gap: 30px;
-}
-@media screen and (max-width: 500px) {
-  .sec-1 {
-    padding: 23px 0;
-  }
 }
 .sec-2 {
   background-color: #fff;
@@ -701,9 +770,6 @@ table img {
     margin-bottom: 10px;
   }
 }
-.sec-3 {
-  padding: 50px 0;
-}
 .sec-3__items {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -762,9 +828,6 @@ table img {
   }
   .sec-3__items {
     margin-top: 28px;
-  }
-  .sec-3 {
-    padding: 30px 0;
   }
 }
 .sec-4 {
@@ -865,9 +928,6 @@ table img {
     font-size: 22px;
   }
 }
-.sec-5 {
-  padding: 50px 0;
-}
 .sec-5 .container {
   display: grid;
   grid-template-columns: 5fr 7fr;
@@ -890,9 +950,6 @@ table img {
   font-size: 22px;
 }
 @media screen and (max-width: 700px) {
-  .sec-5 {
-    padding: 20px 0;
-  }
   .sec-5 .container {
     grid-template-columns: 1fr;
     grid-gap: 20px;
@@ -907,18 +964,6 @@ table img {
     padding: 10px 20px;
     font-size: 16px;
   }
-}
-.sec-6 {
-  padding: 40px 0px 50px 0;
-}
-@media screen and (max-width: 800px) {
-  .sec-6 {
-    padding: 20px 0px 30px 0;
-  }
-}
-.sec-7 {
-  background-color: #F4F4F4;
-  padding: 50px 0;
 }
 .sec-7__items {
   display: grid;
@@ -972,10 +1017,6 @@ table img {
     grid-template-columns: 1fr;
     grid-gap: 20px;
   }
-  .sec-7 {
-    background-color: #F4F4F4;
-    padding: 20px 0;
-  }
   .sec-7__desc {
     margin-top: 5px;
     font-size: 12px;
@@ -983,9 +1024,6 @@ table img {
   .sec-7__item__desc {
     font-size: 12px;
   }
-}
-.sec-8 {
-  padding: 60px 0;
 }
 .sec-8__items {
   display: grid;
@@ -1060,9 +1098,6 @@ table img {
     font-size: 12px;
   }
 }
-.sec-9 {
-  padding: 44px 0;
-}
 .sec-9__img {
   width: 100%;
   padding-bottom: 76%;
@@ -1102,13 +1137,6 @@ table img {
     margin-top: 13px;
     line-height: 130%;
   }
-  .sec-9 {
-    padding: 24px 0;
-  }
-}
-.sec-10 {
-  padding: 50px 0;
-  background-color: #F4F4F4;
 }
 .sec-10__content {
   display: grid;
@@ -1143,9 +1171,6 @@ table img {
   }
 }
 @media screen and (max-width: 800px) {
-  .sec-10 {
-    padding: 26px 0;
-  }
   .sec-10__content {
     grid-template-columns: 1fr ;
   }
@@ -1155,7 +1180,6 @@ table img {
   }
 }
 .sec-11 {
-  padding: 36px 0;
   padding-bottom: 60px;
 }
 .sec-11 table {
@@ -1163,8 +1187,10 @@ table img {
 }
 @media screen and (max-width: 800px) {
   .sec-11 {
-    padding: 26px 0;
     padding-bottom: 26px;
+  }
+  .sec-11 table {
+    margin-top: 22px;
   }
 }
 .sec-12 {
@@ -1228,6 +1254,11 @@ table img {
   font-weight: 500;
   font-size: 22px;
 }
+.sec-13__docs__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
 .sec-13__docs {
   margin-top: 30px;
   display: grid;
@@ -1235,26 +1266,6 @@ table img {
   grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
   grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
   grid-gap: 24px;
-}
-.sec-13__doc {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: start;
-          align-items: flex-start;
-}
-.sec-13__doc__icon {
-  width: 14px;
-  height: 18px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  background-image: url(../img/doc-icon.svg);
-  margin-right: 12px;
-}
-.sec-13__doc__title {
-  font-weight: 500;
-  font-size: 18px;
-  color: black;
 }
 .sec-13__btn-link {
   margin-top: 30px;
@@ -1271,13 +1282,8 @@ table img {
     margin-top: 16px;
     grid-gap: 20px;
   }
-  .sec-13__doc__icon {
-    width: 9px;
-    min-width: 9px;
-    height: 12px;
-  }
-  .sec-13__doc__title {
-    font-size: 12px;
+  .sec-13__docs__wrapper {
+    grid-template-columns: 1fr;
   }
 }
 .sec-14 {
@@ -1376,9 +1382,6 @@ table img {
     grid-gap: 15px;
   }
 }
-.sec-16 {
-  padding: 56px 0;
-}
 .sec-16__content {
   display: grid;
   grid-template-columns: 4fr 8fr;
@@ -1389,42 +1392,27 @@ table img {
           justify-content: start;
   margin-top: 32px;
 }
-.sec-16__content__video {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-          justify-content: center;
+.sec-16-desc {
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 10px;
+}
+.sec-16__content__img {
   width: 100%;
-  padding-bottom: 55%;
-  background-color: gray;
-  position: relative;
-  cursor: pointer;
+  padding-bottom: 80%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-.sec-16__content__video__play {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
 @media screen and (max-width: 800px) {
-  .sec-16 {
-    padding: 30px 0;
-  }
   .sec-16__content {
     margin-top: 20px;
     grid-template-columns: 1fr;
     grid-gap: 16px;
   }
-}
-.sec-17 {
-  background-color: #F4F4F4;
-  padding: 50px 0;
+  .sec-16-desc {
+    font-size: 14px;
+  }
 }
 .sec-17__content {
   display: grid;
@@ -1444,33 +1432,322 @@ table img {
   background-position: center;
   align-self: start;
 }
+.sec-17__content__text__desc {
+  font-weight: 300;
+  font-size: 16px;
+  margin-top: 16px;
+}
 @media screen and (max-width: 800px) {
-  .sec-17 {
-    padding: 30px 0;
-  }
   .sec-17__content {
     grid-template-columns: 1fr;
   }
   .sec-17__content__items {
     grid-template-columns: 1fr 1fr;
   }
-}
-.sec-18 {
-  padding: 50px 0;
-  background-color: #FFFFFF;
+  .sec-17__content__text__desc {
+    font-size: 12px;
+    margin-top: 5px;
+  }
 }
 .sec-18__desc {
   margin-top: 20px;
   color: #a60000;
 }
 @media screen and (max-width: 800px) {
-  .sec-18 {
-    padding: 30px 0;
-  }
   .sec-18__desc {
     font-size: 14px;
     margin-top: 14px;
   }
+}
+.sec-19 .content-wp-editor {
+  margin-top: 30px;
+}
+.sec-19__content {
+  display: grid;
+  grid-template-columns: 7fr 5fr;
+  grid-gap: 60px;
+}
+.sec-19__text__links {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+  grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+  grid-gap: 10px;
+  margin-top: 23px;
+}
+.sec-19__image__img {
+  width: 100%;
+  padding-bottom: 66%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+@media screen and (max-width: 800px) {
+  .sec-19 .content-wp-editor {
+    margin-top: 20px;
+  }
+  .sec-19__content {
+    grid-template-columns: 1fr;
+    grid-gap: 26px;
+  }
+  .sec-19__image {
+    -webkit-box-ordinal-group: 1;
+            order: 0;
+  }
+  .sec-19__text {
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+  }
+}
+.sec-20 .content-wp-editor {
+  margin-top: 20px;
+}
+.sec-21 .content-wp-editor {
+  margin-top: 24px;
+}
+.sec-21__btns {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+.sec-21__btns .btn {
+  margin-right: 17px;
+  margin-bottom: 10px;
+}
+.sec-21__content {
+  display: grid;
+  grid-template-columns: 7fr 5fr;
+  grid-gap: 60px;
+}
+.sec-21__img img {
+  max-width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 800px) {
+  .sec-21__content {
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+  }
+  .sec-21__img {
+    -webkit-box-ordinal-group: 1;
+            order: 0;
+  }
+  .sec-21__text {
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+  }
+  .sec-21 .content-wp-editor {
+    margin-top: 20px;
+  }
+}
+.sec-22 .content-wp-editor {
+  margin-top: 20px;
+}
+.sec-22__content {
+  display: grid;
+  grid-template-columns: 5fr 7fr;
+  grid-gap: 50px;
+  -webkit-box-align: start;
+          align-items: start;
+}
+.sec-22__links {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
+  margin-top: 36px;
+}
+.sec-22__img img {
+  max-width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 800px) {
+  .sec-22__content {
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+  }
+  .sec-22__links {
+    margin-top: 20px;
+  }
+}
+.sec-23 .content-wp-editor {
+  margin-top: 18px;
+}
+@media screen and (max-width: 800px) {
+  .sec-23 .content-wp-editor {
+    margin-top: 10px;
+  }
+}
+.sec-24 .content-wp-editor {
+  margin-top: 18px;
+}
+.sec-24__items {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+  grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+  grid-gap: 10px;
+  margin-top: 36px;
+}
+.sec-24__item {
+  padding: 30px;
+  background-color: #fff;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-gap: 33px;
+  -webkit-box-align: center;
+          align-items: center;
+}
+.sec-24__item__img {
+  width: 100%;
+  padding-bottom: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.sec-24__item__titlebefore {
+  font-weight: 500;
+  font-size: 14px;
+}
+.sec-24__item__title {
+  font-weight: bold;
+  font-size: 24px;
+}
+.sec-24__item__text {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+  grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+  grid-gap: 10px;
+  justify-items: start;
+}
+.sec-24__item__text .content-wp-editor {
+  margin-top: 0;
+  grid-gap: 10px;
+}
+.sec-24__item__text .doc {
+  margin-top: 10px;
+}
+.sec-24__item__text .btn-link {
+  margin-top: 5px;
+}
+@media screen and (max-width: 1000px) {
+  .sec-24__item {
+    grid-template-columns: 1fr;
+    padding: 0;
+    grid-gap: 16px;
+  }
+  .sec-24__item__img {
+    padding-bottom: 80%;
+  }
+  .sec-24__item__text {
+    padding: 20px;
+    padding-top: 0;
+  }
+}
+@media screen and (max-width: 800px) {
+  .sec-24 .content-wp-editor {
+    margin-top: 10px;
+  }
+  .sec-24__item__title {
+    font-size: 20px;
+  }
+  .sec-24__item__text .content-wp-editor {
+    margin-top: 0;
+  }
+}
+.sec-25__content {
+  display: grid;
+  grid-template-columns: 7fr 5fr;
+  grid-gap: 20px;
+  margin-top: 18px;
+}
+.sec-25__content__text .links {
+  margin-top: 24px;
+}
+.sec-25__content__img img {
+  max-width: 100%;
+}
+@media screen and (max-width: 800px) {
+  .sec-25__content {
+    grid-template-columns: 1fr;
+  }
+  .sec-25__content__img {
+    -webkit-box-ordinal-group: 1;
+            order: 0;
+  }
+  .sec-25__content__text {
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+  }
+}
+.sec-26 .links {
+  margin-top: 20px;
+}
+.sec-27__content {
+  display: grid;
+  grid-template-columns: 7fr 5fr;
+  grid-gap: 20px;
+  -webkit-box-align: center;
+          align-items: center;
+}
+.sec-27__content .links {
+  margin-top: 18px;
+}
+.sec-27__content__text .content-wp-editor {
+  margin-top: 18px;
+}
+.sec-27__content__img img {
+  max-width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 800px) {
+  .sec-27__content {
+    grid-template-columns: 1fr;
+  }
+}
+.sec-28__items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  grid-row-gap: 50px;
+  margin-top: 37px;
+}
+.sec-28__item__title {
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 16px;
+}
+@media screen and (max-width: 1000px) {
+  .sec-28__items {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media screen and (max-width: 800px) {
+  .sec-28__items {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 600px) {
+  .sec-28__items {
+    grid-template-columns: 1fr;
+    grid-row-gap: 30px;
+  }
+  .sec-28__item__title {
+    font-size: 14px;
+    margin-top: 16px;
+  }
+}
+.sec-29 .content-wp-editor {
+  margin-top: 18px;
+}
+.sec-29__links {
+  margin-top: 25px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
 }
 .block-1 {
   display: grid;
