--- a/app/less/partials/sections/_hero.less
+++ b/app/less/partials/sections/_hero.less
@@ -4,6 +4,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
+    min-height: 300px;
     * {
         color: white;
         position: relative;
@@ -55,6 +56,7 @@ margin-top: 20px;
 @media screen and (max-width: 500px) {
     .hero {
         padding: 40px 0;
+        min-height: 250px;
     }
     .hero__title {
         font-size: 24px;
