--- a/app/less/partials/sections/_sec-13.less
+++ b/app/less/partials/sections/_sec-13.less
@@ -6,6 +6,11 @@
     font-weight: 500;
     font-size: 22px;
 }
+.sec-13__docs__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
 .sec-13__docs {
     margin-top: 30px;
     display: grid;
@@ -13,24 +18,25 @@
     grid-template-rows: repeat(auto-fill, minmax(max-content,0));
     grid-gap: 24px;
 }
-.sec-13__doc {
-    display: flex;
-    align-items: flex-start;
-}
-.sec-13__doc__icon {
-    width: 14px;
-    height: 18px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    background-image: url(../img/doc-icon.svg);
-    margin-right: 12px;
-}
-.sec-13__doc__title {
-    font-weight: 500;
-    font-size: 18px;
-    color: black;
-}
+// .sec-13__doc {
+//     display: flex;
+//     align-items: flex-start;
+// }
+// .sec-13__doc__icon {
+//     width: 14px;
+//     min-width: 14px;
+//     height: 18px;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: contain;
+//     background-image: url(../img/doc-icon.svg);
+//     margin-right: 12px;
+// }
+// .sec-13__doc__title {
+//     font-weight: 500;
+//     font-size: 18px;
+//     color: black;
+// }
 .sec-13__btn-link {
     margin-top: 30px;
 }
@@ -47,12 +53,15 @@
         margin-top: 16px;
         grid-gap: 20px;
     }
-    .sec-13__doc__icon {
-        width: 9px;
-        min-width: 9px;
-        height: 12px;
-    }
-    .sec-13__doc__title {
-        font-size: 12px;
+    // .sec-13__doc__icon {
+    //     width: 9px;
+    //     min-width: 9px;
+    //     height: 12px;
+    // }
+    // .sec-13__doc__title {
+    //     font-size: 12px;
+    // }
+    .sec-13__docs__wrapper {
+        grid-template-columns: 1fr;
     }
 }
