--- a/app/less/partials/sections/_sec-17.less
+++ b/app/less/partials/sections/_sec-17.less
@@ -1,7 +1,3 @@
-.sec-17 {
-    background-color: #F4F4F4;
-    padding: 50px 0;
-}
 .sec-17__content {
     display: grid;
     grid-template-columns: 4fr 8fr;
@@ -21,15 +17,21 @@
     background-position: center;
     align-self: start;
 }
+.sec-17__content__text__desc {
+    font-weight: 300;
+    font-size: 16px;
+    margin-top: 16px;
+}
 
 @media screen and (max-width: 800px) {
-    .sec-17 {
-        padding: 30px 0;
-    }
     .sec-17__content {
         grid-template-columns: 1fr;
     }
     .sec-17__content__items {
         grid-template-columns: 1fr 1fr;
+    }
+    .sec-17__content__text__desc {
+        font-size: 12px;
+        margin-top: 5px;
     }
 }
