--- a/app/less/partials/sections/_sec-29.less
+++ b/app/less/partials/sections/_sec-29.less
@@ -9,3 +9,18 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
 }
+
+
+
+
+@media screen and (max-width: 800px) {
+    .sec-29 {
+        .content-wp-editor {
+            margin-top: 10px;
+        }
+    }
+    .sec-29__links {
+        grid-template-columns: 1fr;
+        margin-top: 16px;
+    }
+}
