--- a/app/css/main.css
+++ b/app/css/main.css
@@ -105,6 +105,9 @@
   list-style-type: none;
   box-sizing: border-box;
 }
+.hidden {
+  overflow: hidden;
+}
 body {
   display: -webkit-box;
   display: flex;
@@ -134,6 +137,58 @@ p a {
   p {
     font-size: 12px;
   }
+}
+input {
+  padding: 10px 13px;
+  border-radius: 5px;
+  background-color: #fff;
+  border: none;
+  font-weight: normal;
+  font-size: 14px;
+  width: 100%;
+}
+.box {
+  width: 18px;
+  height: 10px;
+  border-radius: 100px;
+  background-color: #e6e6e6;
+  padding: 1px;
+  margin-top: 3px;
+  cursor: pointer;
+}
+.box__circle {
+  width: 8px;
+  height: 8px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.checkbox__text {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.3);
+  margin-left: 8px;
+}
+.checkbox__text a {
+  font-size: 12px;
+  text-decoration: underline;
+  color: rgba(0, 0, 0, 0.3);
+}
+.checkbox {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: start;
+          align-items: flex-start;
+}
+.checkbox input {
+  display: none;
+}
+.checkbox input:checked + .box {
+  background-color: #4EBD7A;
+}
+.checkbox input:checked + .box .box__circle {
+  -webkit-transform: translateX(8px);
+          transform: translateX(8px);
 }
 .container {
   max-width: 1330px;
@@ -167,15 +222,17 @@ p a {
   background-color: #a60000;
   border-radius: 3px;
   padding: 10px 25px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
 }
 .btn:hover {
-  background-color: #8d0000;
+  background-color: #7B0101;
 }
 .btn.gray {
   background-color: #EBEBEB;
   color: #a60000;
+}
+.btn.gray:hover {
+  background-color: #7B0101;
+  color: white;
 }
 .btn.white {
   background-color: #fff;
@@ -185,6 +242,9 @@ p a {
   margin-bottom: 20px;
   font-size: 13px;
   opacity: 0.5;
+}
+.breadcrumbs * {
+  color: white;
 }
 @media screen and (max-width: 500px) {
   .btn {
@@ -220,6 +280,9 @@ p a {
   background-size: contain;
   background-position: center;
   background-image: url(../img/link.svg);
+}
+.link:hover {
+  color: #A60000;
 }
 @media screen and (max-width: 500px) {
   .link {
@@ -434,6 +497,9 @@ table img {
   -webkit-box-align: start;
           align-items: flex-start;
 }
+.doc:hover {
+  color: #A60000;
+}
 .doc__icon {
   width: 14px;
   min-width: 14px;
@@ -462,6 +528,10 @@ table img {
 .header {
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 3;
 }
 .header__top {
   padding: 14px 0;
@@ -529,6 +599,7 @@ table img {
 }
 .has-children {
   position: relative;
+  cursor: pointer;
 }
 .has-children:before {
   content: "";
@@ -556,6 +627,9 @@ table img {
 }
 .header__top .submenu a {
   padding: 5px 20px;
+}
+.header__top .submenu a::before {
+  display: none;
 }
 .header__bottom {
   border-top: 1px solid #f8f8f9;
@@ -1748,6 +1822,351 @@ table img {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
+}
+@media screen and (max-width: 800px) {
+  .sec-29 .content-wp-editor {
+    margin-top: 10px;
+  }
+  .sec-29__links {
+    grid-template-columns: 1fr;
+    margin-top: 16px;
+  }
+}
+.sec-30__title {
+  font-weight: bold;
+  font-size: 24px;
+}
+.sec-30__items {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  margin-top: 34px;
+  grid-gap: 30px;
+}
+.sec-30__item__img {
+  width: 100px;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.sec-30__desc {
+  margin-top: 13px;
+  font-weight: 300;
+  font-size: 16px;
+}
+.sec-30__item__title {
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 10px;
+}
+@media screen and (max-width: 1000px) {
+  .sec-30__items {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 700px) {
+  .sec-30__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 600px) {
+  .sec-30__items {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+  .sec-30__item__title {
+    font-weight: 500;
+    font-size: 14px;
+  }
+  .sec-30__item__img {
+    width: 70px;
+    height: 70px;
+  }
+  .sec-30__title {
+    font-size: 20px;
+  }
+}
+.sec-31__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+}
+.sec-31__content__img img {
+  max-width: 100%;
+}
+@media screen and (max-width: 800px) {
+  .sec-31__content {
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+  }
+  .sec-31__content__img {
+    -webkit-box-ordinal-group: 1;
+            order: 0;
+  }
+  .sec-31__content__text {
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+  }
+}
+.sec-32__title {
+  font-weight: bold;
+  font-size: 24px;
+}
+.sec-32__content .content-wp-editor {
+  margin-top: 10px;
+}
+.sec-32__items {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 30px;
+  margin-top: 34px;
+}
+.sec-32__item__img {
+  width: 100%;
+  padding-bottom: 50%;
+  background-color: #e2e2e2;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.sec-32__item__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  margin-top: 15px;
+}
+.sec-32__item__desc {
+  margin-top: 10px;
+  font-weight: 300;
+  font-size: 16px;
+}
+@media screen and (max-width: 1000px) {
+  .sec-32__items {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 800px) {
+  .sec-32__items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 500px) {
+  .sec-32__items {
+    margin-top: 16px;
+  }
+  .sec-32__title {
+    font-size: 20px;
+  }
+  .sec-32__items {
+    grid-template-columns: 1fr;
+  }
+}
+.sec-33__content {
+  display: grid;
+  grid-template-columns: 5fr 7fr;
+  grid-gap: 30px;
+}
+.sec-33__left .content-wp-editor {
+  margin-top: 14px;
+}
+.sec-33__left .btn {
+  margin-top: 30px;
+}
+.sec-33__items {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+  grid-auto-rows: repeat(auto-fill, minmax(max-content, 0));
+  grid-gap: 20px;
+}
+.sec-33__item__label {
+  font-size: 18px;
+  font-weight: normal;
+}
+.sec-33__item__title {
+  font-weight: bold;
+  font-size: 18px;
+  color: #A60000;
+  margin-top: 10px;
+}
+@media screen and (max-width: 800px) {
+  .sec-33__content {
+    grid-template-columns: 1fr;
+    grid-gap: 26px;
+  }
+  .sec-33__left .btn {
+    margin-top: 20px;
+  }
+  .sec-33__item__label {
+    font-size: 14px;
+  }
+  .sec-33__item__title {
+    font-size: 16px;
+  }
+}
+.mapsection__map {
+  width: 100%;
+  height: 289px;
+  margin-top: 26px;
+}
+@media screen and (max-width: 800px) {
+  .mapsection__map {
+    height: 250px;
+  }
+}
+.s404__content .breadcrumbs * {
+  color: black;
+}
+.s404__content .btn {
+  display: inline-block;
+  margin-top: 26px;
+}
+.s404__desc {
+  margin-top: 17px;
+}
+.mobile__nav {
+  position: fixed;
+  top: 78px;
+  background-color: #fff;
+  border-top: 1px solid #F4F4F4;
+  min-height: calc(100vh - 78px);
+  width: 100%;
+  -webkit-transform: translateX(-30px);
+          transform: translateX(-30px);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 2;
+  overflow-y: auto;
+  opacity: 0;
+}
+.mobile__nav.active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  opacity: 1;
+}
+.mobile__nav__content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  padding: 0 30px;
+  padding-bottom: 20px;
+}
+.mobile__nav__links {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-align: start;
+          align-items: flex-start;
+  margin-top: 10px;
+}
+.mobile__nav__links .has-children {
+  font-size: 13px;
+}
+.mobile__nav__links .has-children:before {
+  right: -15px;
+  top: 18px;
+}
+.mobile__nav__links .has-children.active {
+  color: #a60000;
+}
+.mobile__nav__links .has-children.active:before {
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+.mobile__nav__links li {
+  padding: 10px 0;
+}
+.mobile__nav__links a {
+  color: #07152B;
+  font-size: 13px;
+  pointer-events: initial;
+}
+.mobile__nav__links a:hover {
+  color: #a60000;
+}
+.mobile__nav__submenu {
+  padding-left: 10px;
+  margin-top: 10px;
+}
+@media screen and (max-width: 500px) {
+  .mobile__nav {
+    top: 50px;
+    min-height: calc(100vh - 50px);
+  }
+}
+.modal__wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+          align-items: flex-start;
+  display: none;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.modal__wrapper.active {
+  opacity: 1;
+}
+.modal__wrapper.active .modal {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.modal {
+  background-color: #F6F7F9;
+  border-radius: 10px;
+  padding: 20px 30px;
+  max-width: 420px;
+  margin-top: 100px;
+  -webkit-transform: translateY(-30px);
+          transform: translateY(-30px);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.modal__content__title {
+  text-align: center;
+  font-weight: bold;
+  font-size: 24px;
+}
+.modal__content__desc {
+  font-weight: normal;
+  font-size: 14px;
+  margin-top: 10px;
+  text-align: center;
+}
+.modal__form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(-webkit-max-content, 0));
+  grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+  justify-items: start;
+  grid-gap: 10px;
+  margin-top: 17px;
+}
+.modal__form .checkbox {
+  margin: 10px 0;
+}
+.modal__form__input {
+  width: 100%;
+}
+@media screen and (max-width: 500px) {
+  .modal {
+    max-width: 90%;
+  }
 }
 .block-1 {
   display: grid;
