--- a/app/less/main.less
+++ b/app/less/main.less
@@ -449,6 +449,10 @@ table {
   background-size: contain;
   background-image: url(../img/doc-icon.svg);
   margin-right: 12px;
+  &.video {
+    background-image: url(../img/doc-icon-video.svg);
+    transform: translateY(2px);
+  }
 }
 .doc__title {
   font-weight: 500;
