--- a/app/less/partials/sections/_hero.less
+++ b/app/less/partials/sections/_hero.less
@@ -35,6 +35,7 @@ margin-top: 20px;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fill, minmax(max-content,0));
     grid-gap: 20px;
+    justify-items: start;
 }
 
 .hero__btns {
