--- a/app/less/partials/sections/_sec-1.less
+++ b/app/less/partials/sections/_sec-1.less
@@ -5,4 +5,7 @@
         grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
         grid-gap: 30px;
     }
+    .content-wp-editor {
+        margin-top: 20px;
+    }
 }
