--- a/app/less/partials/blocks/_block-1.less
+++ b/app/less/partials/blocks/_block-1.less
@@ -3,7 +3,7 @@
     grid-template-columns: 7fr 5fr;
     grid-gap: 30px;
     p {
-        margin-top: 14px;
+//         margin-top: 14px;
     }
 }
 
@@ -18,6 +18,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
     grid-gap: 20px;
+    justify-items: start;
 }
 
 @media screen and (max-width: 900px) {
