--- a/app/less/partials/sections/_header.less
+++ b/app/less/partials/sections/_header.less
@@ -30,7 +30,7 @@
   li {
     position: relative;
     &:hover {
-      .submenu {
+      .sub-menu {
         display: block;
       }
     }
@@ -66,7 +66,7 @@
   font-size: 10px;
   color: @red;
 }
-.has-children {
+.menu-item-has-children {
   position: relative;
   cursor: pointer;
   &:before {
@@ -91,7 +91,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  .submenu {
+  .sub-menu {
     top: 35px;
     a {
       padding: 5px 20px;
@@ -109,14 +109,14 @@
       padding-top: 20px;
       padding-bottom: 20px;
     }
-    .submenu {
+    .sub-menu {
       a {
         padding: 5px 20px;
       }
     }
   }
 }
-.submenu {
+.sub-menu {
   display: none;
   position: absolute;
   left: 35px;
