--- a/app/less/partials/sections/_mobile__nav.less
+++ b/app/less/partials/sections/_mobile__nav.less
@@ -30,8 +30,9 @@
     flex-direction: column;
     align-items: flex-start;
     margin-top: 10px;
-    .has-children {
+    .menu-item-has-children {
         font-size: 13px;
+        width: 100%;
         &:before {
             right: -15px;
             top: 18px;
@@ -43,6 +44,14 @@
             }
         }
         
+    }
+    .sub-menu {
+        position: initial;
+        display: block;
+        border-bottom: 0;
+        min-width: 100%;
+        box-shadow: none;
+        padding-top: 15px;
     }
     li {
         padding: 10px 0;
